<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">IT Event Viewer</string>
  <string name="action_settings">設定</string>
  <string name="action_share">シェアする</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="menu_index">一覧</string>
  <string name="menu_region_settings">地域の設定</string>
  <string name="menu_category_settings">カテゴリーの設定</string>
  <string name="menu_settings">設定</string>

  <string name="msg_choose_apps">シェアするアプリを選択してください</string>
  <string name="error">エラー</string>
  <string name="retry">リトライ</string>

  <!-- index -->
  <string name="msg_no_setting">カテゴリを設定してください</string>
  <string name="msg_no_result">検索結果がありません</string>

  <!-- event detail -->
  <string name="title_event_detail">イベント詳細</string>
  <string name="event_detail">イベント詳細</string>
  <string name="url">URL</string>
  <string name="ref_url">参考URL</string>
  <string name="no_url">なし</string>
  <string name="no_limit">定員未指定</string>
  <string name="unit_person">人</string>
  <string name="unit_person_waiting">人待ち</string>

  <!-- region settings -->
  <string name="msg_select_region">地域を選択する</string>
  <string name="msg_select_category">カテゴリを選択する</string>
  <string name="not_selected">未選択</string>
  <string name="not_set">指定なし</string>

  <!-- category settings -->
  <string name="msg_error_tag_list">タグ一覧の取得に失敗しました</string>

  <!-- settings -->
  <string name="setting_checkbox">check setting</string>
  <string name="setting_privacy_policy">プライバシーポリシー</string>
  <string name="setting_do_review">レビューしてあげる</string>
  <string name="setting_software_licences">ソフトウェアライセンス</string>
  <string name="setting_test">test activity</string>

  <!-- sns -->
  <string name="twitter">twitter</string>

  <!-- ATND -->
  <string name="atnd">ATND</string>
  <string name="status_accepted">参加</string>
  <string name="status_waiting">キャンセル待ち</string>

  <!-- connpass -->
  <string name="connpass">connpass</string>

  <!-- Zusaar -->
  <string name="zusaar">Zusaar</string>

  <!-- Doorkeeper -->
  <string name="doorkeeper">Doorkeeper</string>

  <!-- Qiitta -->
  <string name="qiita_token">170b632121d22fbe1a116faca7ea621ae34e2bac</string>
  
</resources>
