<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_margin="@dimen/space_lg">
    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/buttonRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_material_dark"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/msg_select_region"/>

    <TextView
        android:id="@+id/region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:textSize="@dimen/abc_text_size_large_material"
        android:text="@string/not_selected"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginLeft="@dimen/space_lg"
      android:layout_marginRight="@dimen/space_lg">
    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/buttonCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_material_dark"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/msg_select_region"/>

    <TextView
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:textSize="@dimen/abc_text_size_large_material"
        android:text="@string/not_set"/>
  </LinearLayout>
</LinearLayout>