<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_sm">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginBottom="@dimen/space_sm">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Tokyo Cloud Developers Meetup #02"/>

    <TextView
        android:id="@+id/owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_sm"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/abc_text_size_caption_material"
        tools:text="by foo(@foo)"/>
  </LinearLayout>

  <TextView
      android:id="@+id/catchText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/space_sm"
      tools:text="今回のテーマは Google App Engine。"/>

  <TextView
      android:id="@+id/description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/space_sm"
      android:autoLink="all"
      tools:text="クラウド・コンピューティングを扱うディベロッパ・エンジニアのカジュアルなイベント Tokyo Cloud の第２回目を開催します。"/>

  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TableRow
        android:layout_margin="@dimen/space_sm">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/url"/>
      <TextView
          android:id="@+id/eventUrl"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/space_sm"
          android:autoLink="web"
          tools:text="http://google.com"/>
    </TableRow>

    <TableRow
        android:layout_margin="@dimen/space_sm">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ref_url"/>
      <TextView
          android:id="@+id/refUrl"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/space_sm"
          android:autoLink="web"
          tools:text="http://google.com"/>
    </TableRow>
  </TableLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/space_sm"
      android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="@dimen/space_xs"
        android:src="@drawable/ic_action_schedule"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:text="2009/06/10 19:00 〜 21:00"/>

  </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_margin="@dimen/space_sm">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="@dimen/space_xs"
        android:src="@drawable/ic_action_person"/>

    <TextView
        android:id="@+id/stateEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/no_limit"/>

    <LinearLayout
        android:id="@+id/stateNotEmptyContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/accepted"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:textSize="@dimen/abc_text_size_medium_material"
          tools:text="80"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="/"/>

      <TextView
          android:id="@+id/limit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          tools:text="80"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/unit_person"/>

      <TextView
          android:id="@+id/waiting"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/space_md"
          android:textSize="@dimen/abc_text_size_medium_material"
          tools:text="3"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/unit_person_waiting"/>
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/space_sm"
      android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="@dimen/space_xs"
        android:src="@drawable/ic_action_map"/>

    <TextView
        android:id="@+id/addressAndPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="東京都中央区銀座7-2-6 Recruit Annex 1　（リクルートアネックス1）　B1F"/>

  </LinearLayout>

</LinearLayout>